# onq

./: Cargo.toml  README.md
.ipynb_checkpoints/: Bernstein-Vazirani-checkpoint.ipynb
examples/: demo.rs  sqrt_flip_demo.rs  teleportation.rs  vm_bernstein_vazirani.rs  vm_grover_2qdu.rs  vm_teleportation.rs
notebooks/: Cargo.toml  VGE.ipynb  projection-teleportation.ipynb  qmha.ipynb  teleportation.ipynb
notebooks/.ipynb_checkpoints/: Bernstein-Vazirani-checkpoint.ipynb  Cargo-checkpoint.toml  grover-checkpoint.ipynb  projection-teleportation-checkpoint.ipynb  quantum_walks-checkpoint.ipynb  teleportation-checkpoint.ipynb
src/: lib.rs
src/circuits/: mod.rs
src/core/: constants.rs  error.rs  frame.rs  mod.rs  old_state.rs  qdu.rs  state.rs
src/operations/: mod.rs
src/simulation/: engine.rs  mod.rs  results.rs
src/topology/: mod.rs
src/validation/: .mod.rs.kate-swp  mod.rs
src/vm/: interpreter.rs  mod.rs  program.rs
tests/: simulation_tests.rs  vm_tests.rs
